<resources>
    <string name="app_name">BloQuery</string>

    <!-- Login/Signup string values -->
    <string name="title_activity_login">Login Activity</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign-up</string>
    <string name="login_password_reset_help">Forgot Password? Click here.</string>
    <string name="here">here</string>
    <string name="error_empty_fields">Please fill out all fields</string>
    <string name="wait_to_login">logging in. please wait&#8230;</string>
    <string name="error_verify_email">Please verify your email address before continuing</string>
    <string name="attn_login_success">Logged in successfully</string>
    <string name="login_email_hint">enter your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel_password_reset">@android:string/cancel</string>
    <string name="confirm_password_reset">RESET</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="attn_password_reset_instructions">Instructions for password reset being sent to </string>
    <string name="attn_instructions_sent">Instructions sent</string>
    <string name="login_password_confirm_hint">confirm password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>
    <string name="wait_account_creation">creating account. please wait&#8230;</string>
    <string name="create_an_account">Create an Account</string>
    <string name="wait_for_answers">grabbing question and answers&#8230;</string>
    <string name="user_asks">" asks&#8230;"</string>
    <string name="logout">logout</string>
    <string name="logging_out">logging out#8230;</string>
    <string name="add_answer">Add Answer</string>
    <string name="hint_add_answer">enter your answer here</string>
    <string name="btn_submit_answer">Submit Answer</string>
    <string name="saving_answer">Saving answer</string>
    <string name="hint_add_question">what is your question?</string>
    <string name="add_new_question">Add New Question</string>
    <string name="cancel_dialog_fragment">Cancel</string>
    <string name="submit_question">Submit Question</string>
    <string name="creating_question">creating question#8230;</string>
    <string name="new_question">New ?</string>
    <string name="menu_item_myprofile">My Profile</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="image_view_profile_pic">photo used for profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_profile_pic">Change Photo</string>
    <string name="hint_profile_description">enter a description for your profile here</string>
    <string name="profile_view_title">\'s Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_photo">change photo dialog</string>
    <string name="btn_load_photo_from_device">Load from Device</string>
    <string name="btn_take_new_photo">Take new Photo</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="no_user_description">...user has not entered a description</string>


</resources>
